--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.7.1
   firebase_core: ^2.13.0
   provider: ^6.0.5
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
