--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
     "java.configuration.updateBuildConfiguration": "interactive",
-    "cSpell.words": [
-        "userdetails"
-    ]
+    "cmake.sourceDirectory": "C:/Users/Lenovo/OneDrive - National University of Singapore/Documents/GitHub/ConnectCard/ConnectCard/linux"
 }
