--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.13.0
   provider: ^6.0.5
   flutter_spinkit: ^5.1.0
+  google_nav_bar: ^5.0.6
   
 
 dev_dependencies:
