--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_core: ^2.13.0
   provider: ^6.0.5
   flutter_spinkit: ^5.1.0
+  camera: ^0.10.5+2
+  google_mlkit_text_recognition: ^0.8.1
+  permission_handler: ^10.3.0
   
 
 dev_dependencies:
