--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^2.13.0
   provider: ^6.0.5
   flutter_spinkit: ^5.2.0
+  path_provider: ^2.0.5
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
