Revert "Merge branch 'main' into Check"
This reverts commit 0a3dbe3c15c3bec43f78932023ef1e2d3a1c8f2a, reversing
changes made to 7f5823d0d4510364c5ee70deba4a62f1672c28a8.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "java.configuration.updateBuildConfiguration": "interactive",
-    "cmake.sourceDirectory": "C:/Users/Lenovo/OneDrive - National University of Singapore/Documents/GitHub/ConnectCard/ConnectCard/linux"
+    "cSpell.words": [
+        "userdetails"
+    ]
 }
