--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   path_provider: ^2.0.5
   image_picker: ^0.8.7+5
+  firebase_storage: ^11.2.2
 
 dev_dependencies:
   flutter_test:
