Update BG color, change logo path

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,8 +73,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/ConnectCardLogo.jpg
-      - assets/LogoName.jpg
+      - assets/logo/ConnectCardLogo.jpg
+      - assets/logo/LogoName.jpg
+      - assets/logo/ConnectCardLogoNoBg.png
+      - assets/logo/ConnectCardLogoNoBg.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
