--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   permission_handler: ^10.3.0
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
+  carousel_slider: ^4.2.1
   
 
 dev_dependencies:
