--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
   carousel_slider: ^4.2.1
+  url_launcher: ^6.1.11
   
 
 dev_dependencies:
