--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_native_splash: ^2.2.19
   carousel_slider: ^4.2.1
   url_launcher: ^6.1.11
+  flutter_svg: ^2.0.7
   
 
 dev_dependencies:
@@ -97,6 +98,7 @@ flutter:
       - assets/logo/ConnectCardLogo.jpg
       - assets/logo/LogoName.jpg
       - assets/splash.png
+      - assets/search.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
