--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_native_splash: ^2.2.19
   carousel_slider: ^4.2.1
   url_launcher: ^6.1.11
+  nfc_manager: ^3.3.0
+  flutter_nfc_kit: ^3.3.1
   
 
 dev_dependencies:
