--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   carousel_slider: ^4.2.1
   url_launcher: ^6.1.11
   qr_flutter: ^4.1.0
+  qr_code_scanner: ^1.0.1
   
 
 dev_dependencies:
