--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   url_launcher: ^6.1.11
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
+  barcode_scan2: ^4.2.4
   
 
 dev_dependencies:
