--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   image_gallery_saver: ^2.0.3
   modern_form_esys_flutter_share: ^1.1.2
   qr_code_utils: ^0.0.1
+  onboarding: ^3.1.0
 
 dev_dependencies:
   integration_test:
@@ -107,6 +108,9 @@ flutter:
     - assets/search.png
     - assets/logo/whatsapp.png
     - assets/logo/telegram.png
+    - assets/logo/wifi_icon.png
+    - assets/logo/helpicon.png
+    - assets/logo/connectionicon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
